<resources>
    <string name="app_name">MarvelousHeroes</string>
    <string name="marvel_logo">Marvel Logo</string>
    <string name="open">Open drawer</string>
    <string name="close">Close drawer</string>
    <string name="error_load_chars">A error occurred while loading characters</string>
    <string name="welcome">Welcome to MarvelousHeroes</string>
    <string name="choose">Choose your \ncharacter</string>
    <string name="retry">Retry</string>
    <string name="menu">menu</string>
    <string name="search">Search</string>
    <string name="char_img">character image</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="comics">Comics: %1$s</string>
    <string name="stories">Stories: %1$s</string>
    <string name="events">Events: %1$s</string>
    <string name="series">Series: %1$s</string>
    <string name="no_description">This character needs no description.</string>
</resources>